small fix on overflow of wrapper

--- a/src/Loader.css
+++ b/src/Loader.css
@@ -1,5 +1,6 @@
 .loaderWrapper {
   position: absolute;
+  overflow: hidden;
   top : 0 ; left : 0 ;
   width: 100% ;
   height : 4px ;
